almost finish index

--- a/project.config.json
+++ b/project.config.json
@@ -6,7 +6,7 @@
 	"setting": {
 		"newFeature": true
 	},
-	"appid": "wx00dd65d70f19dcec",
+	"appid": "wx3c892b76c0c17106",
 	"projectname": "wafer%20php%20demo",
 	"condition": {}
 }
