--- a/app.json
+++ b/app.json
@@ -1,17 +1,20 @@
 {
   "debug": true,
-  "pages":[
+  "pages": [
     "pages/index/index",
     "pages/category/index",
+    "pages/product/index",
     "pages/cart/index",
+    "pages/order/checkout",
+    "pages/address/select",
     "pages/home/index"
   ],
   "window":{
-    "backgroundColor":"#F6F6F6",
+    "backgroundColor":"#f1f1f1",
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "Winsen's First Mini Program",
-    "navigationBarTextStyle":"white"
+    "navigationBarTitleText": "Mini Program",
+    "navigationBarTextStyle":"black"
   },
   "tabBar": {
     "position": "bottom",
