--- a/app.json
+++ b/app.json
@@ -1,10 +1,11 @@
 {
   "debug": true,
   "pages": [
-    "pages/home/index",
     "pages/index/index",
     "pages/category/index",
+    "pages/home/index",
     "pages/product/index",
+    "pages/product/detail",
     "pages/cart/index",
     "pages/order/checkout",
     "pages/address/select"
