--- a/app.json
+++ b/app.json
@@ -8,6 +8,9 @@
     "pages/home/index",
     "pages/product/index",
     "pages/order/checkout",
+    "pages/order/index",
+    "pages/order/detail",
+    "pages/order/comment",
     "pages/address/index",
     "pages/address/add",
     "pages/address/edit",
