--- a/project.config.json
+++ b/project.config.json
@@ -7,6 +7,6 @@
 		"newFeature": true
 	},
 	"appid": "wx3c892b76c0c17106",
-	"projectname": "wafer%20php%20demo",
+	"projectname": "%E7%BA%A2%E9%85%92",
 	"condition": {}
 }
