--- a/project.config.json
+++ b/project.config.json
@@ -6,7 +6,7 @@
 	"setting": {
 		"newFeature": true
 	},
-	"appid": "wx3c892b76c0c17106",
-	"projectname": "%E7%BA%A2%E9%85%92",
+	"appid": "wx1568a78db67a6f4b",
+	"projectname": "Wine",
 	"condition": {}
 }
