--- a/app.json
+++ b/app.json
@@ -21,7 +21,7 @@
     "backgroundColor":"#fafafa",
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#870020",
-    "navigationBarTitleText": "澳臻世Ozonsh",
+    "navigationBarTitleText": "森云酒业",
     "navigationBarTextStyle":"white"
   },
   "tabBar": {
