--- a/app.json
+++ b/app.json
@@ -16,14 +16,17 @@
     "pages/address/edit",
     "pages/address/select",
     "pages/feed/index",
-    "pages/order/pay"
+    "pages/order/pay",
+    "pages/order/track",
+    "pages/feed/detail"
   ],
   "window": {
     "backgroundColor": "#fafafa",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#870020",
     "navigationBarTitleText": "澳臻世Ozonsh",
-    "navigationBarTextStyle": "white"
+    "navigationBarTextStyle": "white",
+    "enablePullDownRefresh": true
   },
   "tabBar": {
     "color": "#656565",
