--- a/app.json
+++ b/app.json
@@ -23,6 +23,7 @@
     "pages/home/integral",
     "pages/home/coupon",
     "pages/product/detail",
+    "pages/product/level",
     "pages/order/pay",
     "pages/order/track",
     "pages/home/balance",
