--- a/project.config.json
+++ b/project.config.json
@@ -4,7 +4,7 @@
 		"ignore": []
 	},
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -106,6 +106,27 @@
 					"id": -1,
 					"name": "pages/home/index",
 					"pathName": "pages/home/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": 8,
+					"name": "pages/product/level",
+					"pathName": "pages/product/level",
+					"query": "id=2",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/product/detail",
+					"pathName": "pages/product/detail",
+					"query": "id=2",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/home/wallet",
+					"pathName": "pages/home/wallet",
 					"scene": null
 				}
 			]
