--- a/app.json
+++ b/app.json
@@ -30,7 +30,11 @@
     "pages/block/index",
     "pages/member/index",
     "pages/home/index2",
-    "pages/home/member"
+    "pages/home/member",
+    "pages/inventory/index",
+    "pages/delivery_order/index",
+    "pages/home/profile",
+    "pages/coupon/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -68,7 +72,7 @@
         "selectedIconPath": "assets/images/cart@active.png"
       },
       {
-        "pagePath": "pages/home/index2",
+        "pagePath": "pages/home/index",
         "text": "我的",
         "iconPath": "assets/images/home.png",
         "selectedIconPath": "assets/images/home@active.png"
