库存 提货 优惠券

--- a/app.json
+++ b/app.json
@@ -34,7 +34,8 @@
     "pages/inventory/index",
     "pages/delivery_order/index",
     "pages/home/profile",
-    "pages/coupon/index"
+    "pages/coupon/index",
+    "pages/inventory/pickup"
   ],
   "window": {
     "backgroundTextStyle": "light",
