--- a/project.config.json
+++ b/project.config.json
@@ -11,6 +11,8 @@
 		"newFeature": true,
 		"coverView": true,
 		"autoAudits": false,
+		"showShadowRootInWxmlPanel": true,
+		"scopeDataCheck": false,
 		"checkInvalidKey": true,
 		"checkSiteMap": true,
 		"uploadWithSourceMap": true,
@@ -18,7 +20,9 @@
 			"ignore": [],
 			"disablePlugins": [],
 			"outputPath": ""
-		}
+		},
+		"useCompilerModule": false,
+		"userConfirmedUseCompilerModuleSwitch": false
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.10.0",
@@ -55,15 +59,16 @@
 			"current": -1,
 			"list": [
 				{
-					"id": -1,
+					"id": 0,
 					"name": "首页带参数",
 					"pathName": "pages/index/index",
-					"query": "recommend=123456"
+					"query": "scene= 58172df3ef37696b0f6daf039428fdf1",
+					"scene": null
 				},
 				{
 					"id": 1,
 					"name": "会员中心",
-					"pathName": "pages/member/index",
+					"pathName": "pages/home/index",
 					"query": "recommend=123456",
 					"scene": null
 				},
@@ -121,6 +126,13 @@
 					"name": "产品评价",
 					"pathName": "pages/product/comment",
 					"query": "id=1",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/index/index",
+					"pathName": "pages/index/index",
+					"query": "scene= 58172df3ef37696b0f6daf039428fdf1",
 					"scene": null
 				}
 			]
